# cercle-mcp

./: README.md  pyproject.toml
.claude-plugin/: plugin.json
data/: last_search.json
scripts/: cercle.py  search_github.py  search_hn.py  search_x.py
scripts/lib/: __init__.py  github.py  hackernews.py  http.py  models.py  reddit.py  render.py  score.py  stackoverflow.py  x_search.py
skills/cercle/: SKILL.md
